// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textOverlineMode renders 0 1`] = `
Array [
  .c0 {
  text-overline-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders function 1`] = `
Array [
  .c0 {
  text-overline-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders invalid theme path 1`] = `
Array [
  .c0 {
  text-overline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders negative number 1`] = `
Array [
  .c0 {
  text-overline-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-overline-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-overline-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-overline-mode: July;
  }
}

@media April {
  .c0 {
    text-overline-mode: August;
  }
}

@media January {
  .c0 {
    text-overline-mode: September;
  }
}

@media April {
  .c0 {
    text-overline-mode: November;
  }
}

@media June {
  .c0 {
    text-overline-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-overline-mode: July;
  }
}

@media April {
  .c0 {
    text-overline-mode: August;
  }
}

@media January {
  .c0 {
    text-overline-mode: September;
  }
}

@media April {
  .c0 {
    text-overline-mode: November;
  }
}

@media June {
  .c0 {
    text-overline-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-mode: January;
  }
}

@media April {
  .c0 {
    text-overline-mode: December;
  }
}

@media January {
  .c0 {
    text-overline-mode: April;
  }
}

@media April {
  .c0 {
    text-overline-mode: May;
  }
}

@media June {
  .c0 {
    text-overline-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-mode: January;
  }
}

@media April {
  .c0 {
    text-overline-mode: December;
  }
}

@media January {
  .c0 {
    text-overline-mode: April;
  }
}

@media April {
  .c0 {
    text-overline-mode: May;
  }
}

@media June {
  .c0 {
    text-overline-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders postitive number 1`] = `
Array [
  .c0 {
  text-overline-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders string 1`] = `
Array [
  .c0 {
  text-overline-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineMode renders valid theme path 1`] = `
Array [
  .c0 {
  text-overline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
